[bdist_wheel]
universal=1

[flake8]
ignore = E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E501,E701
exclude = waybill_tests/*
format = pylint

[metadata]
name = waybill
author = Kyle Rockman
author_email = ['kyle.rockman@mac.com']
summary = A python commandline tool to run commandline tools that are in docker images
description-file = README.rst
license-file = LICENSE
home-page = http://github.com/rocktavious/waybill
classifiers = 
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2 :: Only

[files]
packages = 
    waybill

[entry_points]
console_scripts =
    waybill = waybill.cli:main

[pbr]
warnerrors = True

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

